<resources>
    <string name="to_do">TO DO</string>
    <string name="app_name">Real Estate Manager</string>

    <string name="app_support_tablet">tablet</string>
    <string name="app_support_phone">phone</string>
    <string name="exit_app_back_pressed">Press one more time to exit</string>

    <string name="default_img_description">@null</string>
    <string name="default_btn_cancel">Cancel</string>
    <string name="default_btn_save">Save</string>
    <string name="default_btn_ok">OK</string>
    <string name="default_txt_search">Search</string>
    <string name="default_txt_add">Add</string>
    <string name="default_txt_clear">Clear search</string>
    <string name="default_txt_map">Map</string>
    <string name="default_txt_edit">Edit</string>
    <string name="default_txt_save">Save</string>
    <string name="default_txt_confirm">Confirm</string>
    <string name="default_txt_data_not_saved">Data not saved</string>
    <string name="default_txt_no_internet_no_backup">No internet connection. Impossible to save data</string>
    <string name="default_txt_notification_message_successful">Real estate added successfully !</string>
    <string name="default_txt_notification_message_incomplete">Real estate is added but is incomplete !</string>
    <string name="default_txt_notification_message_to_complete">Complete it to visualize it in the list.</string>
    <string name="default_txt_no_internet_no_map">No internet connection. Impossible to open the map</string>

    <!-- TABLET -->
    <string name="fragment_list">LIST</string>
    <string name="fragment_right">RIGHT</string>

    <!-- ERRORS -->
    <string name="add_edit_txt_err_data_incorrect">Error on data</string>
    <string name="add_edit_txt_err_no_data">No data to save. Please enter information.</string>
    <string name="add_edit_txt_err_date_sold_before_date_market">The sold date can\'t be before the on market date</string>
    <string name="add_edit_txt_err_agent_not_valid">Agent information invalid</string>
    <string name="add_edit_txt_err_date_sold_empty">Sold date can\'t be empty</string>
    <string name="add_edit_txt_err_check_sold_not_confirm">Check the box \"Sold\" to confirm the sale</string>
    <string name="search_txt_err_select_one_criterion">Select at least one criterion</string>
    <string name="search_txt_err_no_data_found">No real estate found</string>
    <string name="search_txt_err_date_max_before_min">Max date can\'t be before min date</string>
    <string name="search_txt_err_int_max_inferior_min">Max cant\' be inferior to min</string>


    <!-- REGEX PATTERN -->
    <string name="regex_agent">(\\p{L})*((\\s|-|\'?)*\\p{L}\\s?)*</string>
    <string name="regex_street">((\\d*)?)((\\s|,|-|\'?)*(\\p{L}+)\\s?)*</string>
    <string name="regex_city">(\\p{L}+)((\\s|-|\'?)*\\p{L}\\s?)*</string>
    <string name="regex_zip_code">[0-9]{5}</string>

    <!-- REAL ESTATE VOCABULARY -->
    <string name="txt_location">Location</string>
    <string name="txt_address">Address</string>
    <string name="txt_street">Street</string>
    <string name="txt_district">District</string>
    <string name="txt_zip_code">ZipCode</string>
    <string name="txt_city">City</string>
    <string name="txt_county">County</string>
    <string name="txt_country">Country</string>
    <string name="txt_address_hint">(Street, City, ZipCode, Country)</string>
    <string name="txt_on_market_date">On market</string>
    <string name="txt_on_market_date_from">On market from</string>
    <string name="txt_on_market_date_to">On market to</string>
    <string name="txt_status">Status</string>
    <string name="txt_type">Type</string>
    <string name="txt_rooms">Rooms</string>
    <string name="txt_bedrooms">Bedrooms</string>
    <string name="txt_bathrooms">Bathrooms</string>
    <string name="txt_long_rooms">Number of rooms</string>
    <string name="txt_long_bedrooms">Number of Bedrooms</string>
    <string name="txt_long_bathrooms">Number of Bathrooms</string>
    <string name="txt_description">Description</string>
    <string name="txt_price">Price</string>
    <string name="txt_price_min">Price min</string>
    <string name="txt_price_max">Price max</string>
    <string name="txt_poi">Points of interest</string>
    <string name="txt_photos">Photos</string>
    <string name="txt_photo_description">Photo description</string>
    <string name="txt_take_photo">Take photo</string>
    <string name="txt_add_photo">Add photo</string>
    <string name="txt_area">Area (in m²)</string>
    <string name="txt_area_min">Area min</string>
    <string name="txt_area_max">Area max</string>
    <string name="txt_data_incomplete">Data incomplete</string>
    <string name="txt_sold">Sold</string>
    <string name="txt_sold_date">Sold on</string>
    <string name="txt_sold_date_from">Sold on from</string>
    <string name="txt_sold_date_to">Sold on to</string>
    <string name="txt_real_estate">Real estate</string>
    <string name="txt_agent">Agent</string>
    <string name="txt_agent_first">Agent first name</string>
    <string name="txt_agent_last_name">Agent last name</string>
    <string name="txt_agent_in_charge">Agent in charge of</string>
    <string name="txt_view_det_re">View real estate detail</string>
    <string name="txt_view_agent">View agent</string>
    <string name="txt_add_re">Add new real estate</string>
    <string name="txt_add_edit_re">Add Edit real estate</string>
    <string name="txt_edit_re">Edit real estate</string>
    <string name="txt_add_agent">Add new agent</string>
    <string name="txt_edit_agent">Edit agent</string>
    <string name="txt_number_of">Number of</string>

    <!-- LOAN SIMULATOR -->
    <string name="loan_txt_loan_simulator">Loan simulator</string>
    <string name="loan_txt_contribution">Contribution</string>
    <string name="loan_txt_default_number">0</string>
    <string name="loan_txt_rate">Rate (in %)</string>
    <string name="loan_txt_duration">Duration (in Years)</string>
    <string name="loan_txt_monthly_payment">Monthly payment</string>
    <string name="loan_txt_calculate">Calculate loan</string>
    <string name="loan_txt_err_valid_input">The fields are mandatory : </string>
    <string name="loan_txt_err_field_rate">Rate</string>
    <string name="loan_txt_err_field_duration">Duration</string>


    <!-- SPINNERS -->
    <string name="spinners_select">--Select--</string>
    <string name="spinners_select_type">--Select a type--</string>
    <string name="spinners_select_country">--Select a country--</string>

    <!-- POI -->
    <string name="poi_bank">Bank</string>
    <string name="poi_food">Food</string>
    <string name="poi_health">Health</string>
    <string name="poi_restaurant">Restaurant</string>
    <string name="poi_school">School</string>
    <string name="poi_store">Store</string>
    <string name="poi_subway">Subway</string>
    <string name="poi_park">Park</string>
    <string name="poi_title_list">POI List</string>

    <!-- STATIC MAP PARAMETER -->
    <string name="static_map_size">200x200</string>
    <string name="static_map_size_land">300x300</string>
    <string name="static_map_scale">2</string>
    <string name="static_map_zoom">14</string>
    <string name="static_map_txt_markers_param">size:mid|color:blue|label:RE|</string>

    <!-- MAPS -->
    <string name="map_zoom">16</string>
    <string name="default_latitude_position">48.8534</string>
    <string name="default_longitude_position">2.3488</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to enable the location.</string>
    <string name="location_permission_denied">This application requires location permission to enable the location. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required.</string>

</resources>
