<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_general"
        android:title="@string/default_txt_confirm"
        android:icon="@android:drawable/ic_menu_more"
        app:showAsAction="always" >

        <menu>
            <item
                android:id="@+id/action_map"
                android:icon="@drawable/ic_map"
                android:title="@string/default_txt_map" />
            <item
                android:id="@+id/action_add"
                android:icon="@drawable/ic_add"
                android:title="@string/default_txt_add" />
            <item
                android:id="@+id/action_search"
                android:icon="@drawable/ic_search"
                android:title="@string/default_txt_search" />
            <item
                android:id="@+id/action_clear_search"
                android:icon="@drawable/ic_clear_search"
                android:title="@string/default_txt_clear" />
            <item
                android:id="@+id/action_loan"
                android:icon="@drawable/ic_calculate"
                android:title="@string/loan_txt_calculate" />

        </menu>

    </item>


</menu>