<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/frag_re_add_edit_cardv_poi"
    style="@style/ReTheme.CardView">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/frag_re_add_edit_img_poi"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/default_img_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_poi" />

        <TextView
            android:id="@+id/frag_re_add_edit_et_poi"
            style="@style/ReTheme.TxtView"
            android:text="@string/txt_poi"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_edit_img_poi"
            app:layout_constraintStart_toEndOf="@id/frag_re_add_edit_img_poi"
            app:layout_constraintTop_toTopOf="@id/frag_re_add_edit_img_poi" />


        <CheckBox
            android:id="@+id/frag_re_add_edit_poi_bank"
            style="@style/ReTheme.CheckBox"
            android:text="@string/poi_bank"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_img_poi" />

        <CheckBox
            android:id="@+id/frag_re_add_edit_poi_food"
            style="@style/ReTheme.CheckBox"
            android:text="@string/poi_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/frag_re_add_edit_poi_bank"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_img_poi" />

        <CheckBox
            android:id="@+id/frag_re_add_edit_poi_health"
            style="@style/ReTheme.CheckBox"
            android:text="@string/poi_health"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_poi_bank" />

        <CheckBox
            android:id="@+id/frag_re_add_edit_poi_restaurant"
            style="@style/ReTheme.CheckBox"
            android:text="@string/poi_restaurant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/frag_re_add_edit_poi_bank"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_poi_food" />

        <CheckBox
            android:id="@+id/frag_re_add_edit_poi_school"
            style="@style/ReTheme.CheckBox"
            android:text="@string/poi_school"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_poi_health" />

        <CheckBox
            android:id="@+id/frag_re_add_edit_poi_store"
            style="@style/ReTheme.CheckBox"
            android:text="@string/poi_store"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/frag_re_add_edit_poi_bank"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_poi_health" />

        <CheckBox
            android:id="@+id/frag_re_add_edit_poi_subway"
            style="@style/ReTheme.CheckBox"
            android:text="@string/poi_subway"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_poi_school" />

        <CheckBox
            android:id="@+id/frag_re_add_edit_poi_park"
            style="@style/ReTheme.CheckBox"
            android:text="@string/poi_park"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/frag_re_add_edit_poi_bank"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_poi_school" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>