<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_re_add_edit_cardv_location"
    style="@style/ReTheme.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/frag_re_add_edit_img_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/default_img_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_location" />

        <TextView
            android:id="@+id/frag_re_add_edit_tv_location"
            style="@style/ReTheme.TxtView"
            android:text="@string/txt_location"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_edit_img_location"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_img_location"
            app:layout_constraintTop_toTopOf="@+id/frag_re_add_edit_img_location" />

        <EditText
            android:id="@+id/frag_re_add_edit_et_street"
            style="@style/ReTheme.EditTxt"
            android:hint="@string/txt_street"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_tv_location" />

        <EditText
            android:id="@+id/frag_re_add_edit_et_district"
            style="@style/ReTheme.EditTxt"
            android:hint="@string/txt_district"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_et_street" />

        <EditText
            android:id="@+id/frag_re_add_edit_et_city"
            style="@style/ReTheme.EditTxt"
            android:hint="@string/txt_city"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_et_district" />

        <EditText
            android:id="@+id/frag_re_add_edit_et_county"
            style="@style/ReTheme.EditTxt"
            android:hint="@string/txt_county"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_et_city" />

        <EditText
            android:id="@+id/frag_re_add_edit_et_zip_code"
            style="@style/ReTheme.EditTxt"
            android:hint="@string/txt_zip_code"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_et_county" />

        <Spinner
            android:id="@+id/frag_re_add_spin_country"
            style="@style/ReTheme.Spinner"
            android:layout_marginEnd="@dimen/default_margin_end"
            android:prompt="@string/txt_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_et_zip_code" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>