<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/reDetailFragment">

    <fragment
        android:id="@+id/reAddEditFragment"
        android:name="com.openclassrooms.realestatemanager.view.fragments.ReAddEditFragment"
        android:label="@string/txt_add_re"
        tools:layout="@layout/fragment_re_add_edit"/>
    <fragment
        android:id="@+id/reDetailFragment"
        android:name="com.openclassrooms.realestatemanager.view.fragments.ReDetailFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_re_detail">
        <argument
            android:name="reid"
            android:defaultValue="0"
            app:argType="integer" />
        <argument
            android:name="realestate"
            app:argType="com.openclassrooms.realestatemanager.model.RealEstate"
            app:nullable="true" />
        <action
            android:id="@+id/action_reDetailFragment_to_reAddEditFragment"
            app:destination="@id/reAddEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/loanFragment"
        android:name="com.openclassrooms.realestatemanager.view.fragments.LoanFragment"
        android:label="@string/loan_txt_loan_simulator"
        tools:layout="@layout/fragment_loan" />
    <fragment
        android:id="@+id/reSearchFragment"
        android:name="com.openclassrooms.realestatemanager.view.fragments.ReSearchFragment"
        android:label="@string/default_txt_search"
        tools:layout="@layout/fragment_re_search" />

</navigation>