<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_re_add_edit_cardv_description"
    style="@style/ReTheme.CardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/frag_re_add_edit_img_type"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/txt_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_edit_spin_type"
            app:layout_constraintTop_toTopOf="@+id/frag_re_add_edit_spin_type"
            app:srcCompat="@drawable/ic_type" />

        <Spinner
            android:id="@+id/frag_re_add_edit_spin_type"
            style="@style/ReTheme.Spinner"
            android:layout_marginTop="@dimen/default_margin_top"
            android:layout_marginEnd="@dimen/default_margin_end"
            android:prompt="@string/txt_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_img_type" />

        <ImageView
            android:id="@+id/frag_re_add_edit_img_area"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/default_img_description"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_edit_et_area"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frag_re_add_edit_et_area"
            app:srcCompat="@drawable/ic_area" />

        <EditText
            android:id="@+id/frag_re_add_edit_et_area"
            style="@style/ReTheme.EditTxt"
            android:hint="@string/txt_area"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_img_area"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_spin_type"
            app:layout_constraintWidth_percent="0.37"/>

        <ImageView
            android:id="@+id/frag_re_add_edit_img_price"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/default_img_description"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_edit_et_price"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_et_area"
            app:layout_constraintTop_toTopOf="@+id/frag_re_add_edit_et_price"
            app:srcCompat="@drawable/ic_price" />

        <EditText
            android:id="@+id/frag_re_add_edit_et_price"
            style="@style/ReTheme.EditTxt"
            android:hint="@string/txt_price"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_img_price"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_spin_type"
            app:layout_constraintWidth_percent="0.37"/>

        <ImageView
            android:id="@+id/frag_re_add_edit_img_room"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/default_img_description"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_edit_spin_rooms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frag_re_add_edit_spin_rooms"
            app:srcCompat="@drawable/ic_room" />

        <Spinner
            android:id="@+id/frag_re_add_edit_spin_rooms"
            style="@style/ReTheme.SpinnerRoom"
            android:layout_marginEnd="@dimen/default_margin_end"
            android:prompt="@string/txt_rooms"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_img_room"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_et_area"
            />

        <ImageView
            android:id="@+id/frag_re_add_edit_img_bedroom"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/default_img_description"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_spin_bedrooms"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_spin_rooms"
            app:layout_constraintTop_toTopOf="@+id/frag_re_add_spin_bedrooms"
            app:srcCompat="@drawable/ic_bedroom" />

        <Spinner
            android:id="@+id/frag_re_add_spin_bedrooms"
            style="@style/ReTheme.SpinnerRoom"
            android:layout_marginEnd="@dimen/default_margin_end"
            android:prompt="@string/txt_bedrooms"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_img_bedroom"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_et_area" />

        <ImageView
            android:id="@+id/frag_re_add_edit_img_bathroom"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/default_img_description"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_spin_bathrooms"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_spin_bedrooms"
            app:layout_constraintTop_toTopOf="@+id/frag_re_add_spin_bathrooms"
            app:srcCompat="@drawable/ic_bathroom" />

        <Spinner
            android:id="@+id/frag_re_add_spin_bathrooms"
            style="@style/ReTheme.SpinnerRoom"
            android:layout_marginEnd="@dimen/default_margin_end"
            android:prompt="@string/txt_bathrooms"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_img_bathroom"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_et_area" />

        <ImageView
            android:id="@+id/frag_re_add_edit_img_description"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/default_img_description"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_edit_et_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frag_re_add_edit_et_description"
            app:srcCompat="@drawable/ic_description" />

        <EditText
            android:id="@+id/frag_re_add_edit_et_description"
            style="@style/ReTheme.EditTxt"
            android:layout_marginBottom="@dimen/default_margin_bottom"
            android:hint="@string/txt_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_spin_rooms"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_img_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>