<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frag_re_add_edit_cardv_status"
    style="@style/ReTheme.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/frag_re_add_edit_img_market_date"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/default_img_description"
            app:srcCompat="@drawable/ic_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frag_re_add_edit_et_market_date"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_edit_et_market_date"/>

        <EditText
            android:id="@+id/frag_re_add_edit_et_market_date"
            style="@style/ReTheme.EditTxt"
            android:hint="@string/txt_on_market_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:focusable="false"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_img_market_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.28"/>

        <CheckBox
            android:id="@+id/frag_re_add_edit_cb_sold"
            style="@style/ReTheme.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sold_date"
            app:layout_constraintTop_toTopOf="@+id/frag_re_add_edit_et_sold_date"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_edit_et_sold_date"
            app:layout_constraintEnd_toStartOf="@+id/frag_re_add_edit_et_sold_date"
            />

        <EditText
            android:id="@+id/frag_re_add_edit_et_sold_date"
            style="@style/ReTheme.EditTxt"
            android:hint="@string/txt_sold_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.28"/>

        <ImageView
            android:id="@+id/frag_re_add_edit_img_agent"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/default_img_description"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_edit_et_agent_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/frag_re_add_edit_et_agent_last_name"
            app:srcCompat="@drawable/ic_agent" />

        <EditText
        android:id="@+id/frag_re_add_edit_et_agent_last_name"
        style="@style/ReTheme.EditTxt"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        android:hint="@string/txt_agent_last_name"
        app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_et_market_date"
        app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_img_agent"
        android:inputType="text"
        android:importantForAutofill="no"
            app:layout_constraintWidth_percent="0.42"/>

        <EditText
            android:id="@+id/frag_re_add_edit_et_agent_first_name"
            style="@style/ReTheme.EditTxt"
            android:layout_marginBottom="@dimen/default_margin_bottom"
            android:hint="@string/txt_agent_first"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_et_market_date"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_et_agent_last_name"
            android:inputType="text"
            android:importantForAutofill="no"
            app:layout_constraintWidth_percent="0.42"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>