<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/default_margin_bottom"
    android:id="@+id/frag_re_add_edit_cardv_photo"
    style="@style/ReTheme.CardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/frag_re_add_edit_img_photo"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/txt_photos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/frag_re_add_edit_et_photo"
            app:layout_constraintTop_toTopOf="@+id/frag_re_add_edit_et_photo"
            app:srcCompat="@drawable/ic_photo" />

        <EditText
            android:id="@+id/frag_re_add_edit_et_photo"
            style="@style/ReTheme.EditTxt"
            android:hint="@string/txt_photo_description"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/frag_re_add_edit_img_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/frag_re_add_edit_img_take_photo"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/txt_take_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/frag_re_add_edit_img_add_photo"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_et_photo"
            app:srcCompat="@drawable/ic_take_photo_48"
            android:layout_marginStart="40dp"/>
        <ImageView
            android:id="@+id/frag_re_add_edit_img_add_photo"
            style="@style/ReTheme.ImgView"
            android:contentDescription="@string/txt_add_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/frag_re_add_edit_img_take_photo"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_et_photo"
            app:srcCompat="@drawable/ic_add_photo_48"
            android:layout_marginStart="40dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/frag_re_add_edit_rv_photo"
            android:layout_width="@dimen/app_zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/frag_re_add_edit_img_add_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/fragment_re_cardview_photo_item"
            android:layout_marginBottom="@dimen/default_margin_bottom"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>